modify negative margin with transform

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
   </head>
   <body class="relative bg-dark-blue-100">
     <nav class="py-6 md:py-10 z-10 top-0 left-0 right-0 bg-dark-blue">
-      <div class="max-w-screen-xl mx-auto px-6">
+      <div class="max-w-screen-lg mx-auto px-6">
         <div class="flex items-center justify-between">
           <img src="/images/logo.svg" alt="logo" class="w-24 md:w-32" />
           <ul class="flex items-center gap-2 md:gap-8">
@@ -94,7 +94,7 @@
     <!-- FEATURES -->
 
     <section class="relative z-10 pb-20 bg-dark-blue-300">
-      <div class="max-w-screen-xl mx-auto px-6">
+      <div class="max-w-screen-lg mx-auto px-6">
         <div class="px-4 grid md:grid-cols-2 gap-y-24">
           <div class="max-w-[22.8rem] mx-auto flex flex-col text-center">
             <img src="/images/icon-access-anywhere.svg" alt="" class="w-16 m-auto mb-4" />
@@ -161,7 +161,7 @@
     <!-- TESTIMONIALS -->
 
     <section class="pt-20 pb-80 md:pb-96 bg-dark-blue-300">
-      <div class="max-w-screen-xl mx-auto px-10">
+      <div class="max-w-screen-lg mx-auto px-10">
         <div class="relative grid md:grid-cols-3 gap-6">
           <img
             src="/images/bg-quotes.png"
@@ -210,37 +210,38 @@
       </div>
     </section>
 
-    <!-- SUSCRIBE -->
+    <!-- SUBSCRIBE -->
 
-    <article
-      class="-my-48 md:-mt-52 md:-mb-28 relative rounded-lg max-w-3xl mx-4 md:mx-auto bg-dark-blue-200 shadow-lg">
-      <form class="px-8 md:px-16 py-10 flex flex-col justify-center items-center text-center space-y-8">
-        <div class="space-y-4">
-          <h3 class="mb-4 text-[1.4rem] md:text-[1.8rem] font-semibold text-white">Get early access today</h3>
-          <p class="text-[0.85rem] text-white">
-            It only takes a minute to sign up and our free starter tier is extremely generous. If you have any
-            questions, our support team would be happy to help you.
-          </p>
-        </div>
-        <div class="w-full flex flex-col md:flex-row gap-6">
-          <input
-            type="text"
-            class="flex-1 px-8 py-4 rounded-full text-[0.63rem] placeholder:text-gray-300"
-            placeholder="email@example.com" />
-          <button
-            class="py-4 px-8 rounded-full bg-blue hover:bg-cyan font-semibold text-[0.78rem] text-white transition-colors duration-300">
-            Get Started For Free
-          </button>
-        </div>
-      </form>
-    </article>
+    <!-- <div class="relative bg-transparent">
+      <article
+        class="absolute flex flex-col top-0 left-0 rounded-lg bg-dark-blue-200 shadow-lg">
+        <form class="flex flex-col justify-center items-center text-center space-y-8">
+          <div class="space-y-4">
+            <h3 class="mb-4 text-[1.4rem] md:text-[1.8rem] font-semibold text-white">Get early access today</h3>
+            <p class="text-[0.85rem] text-white">
+              It only takes a minute to sign up and our free starter tier is extremely generous. If you have any
+              questions, our support team would be happy to help you.
+            </p>
+          </div>
+          <div class="flex flex-col md:flex-row gap-6">
+            <input
+              type="text"
+              class="flex-1 px-8 py-4 rounded-full text-[0.63rem] placeholder:text-gray-300"
+              placeholder="email@example.com" />
+            <button
+              class="py-4 px-8 rounded-full bg-blue hover:bg-cyan font-semibold text-[0.78rem] text-white transition-colors duration-300">
+              Get Started For Free
+            </button>
+          </div>
+        </form>
+      </article>
+    </div> -->
 
     <!-- FOOTER -->
 
-    <footer class="pt-48 pb-8 md:pb-20 bg-dark-blue-400 text-white">
-      <div class="max-w-screen-xl mx-auto px-6">
-        <!-- <div class="flex flex-col justify-between gap-16"> -->
-        <div class="grid md:grid-cols-[3fr_1fr_1fr] gap-8 px-4">
+    <footer class="pt-72 pb-8 md:pb-20 bg-dark-blue-400 text-white">
+      <div class="max-w-screen-lg mx-auto px-6">
+        <div class="grid md:grid-cols-[3fr_1fr_1fr] gap-8">
           <img src="/images/logo.svg" alt="" class="col-span-full" />
           <ul class="grid md:grid-cols-5 gap-12">
             <li class="flex gap-4 md:gap-6 md:col-span-3">
