--- a/src/index.html
+++ b/src/index.html
@@ -3,29 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
-
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Raleway:wght@400;700&display=swap"
       rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" />
-
     <link href="/dist/output.css" rel="stylesheet" />
-
     <title>Frontend Mentor | Fylo landing page with dark theme and features grid</title>
-
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
   </head>
   <body class="relative bg-dark-blue-100">
     <nav class="py-6 md:py-10 z-10 top-0 left-0 right-0 bg-dark-blue">
@@ -85,8 +71,8 @@
         </div>
       </div>
       <div class="w-full absolute -z-10 bottom-0">
-        <img src="/images/bg-curvy-mobile.svg" alt="" class="w-full md:hidden" />
-        <img src="/images/bg-curvy-desktop.svg" alt="" class="w-full hidden md:block" />
+        <img src="/images/bg-curvy-mobile.svg" alt="curvy background" class="w-full md:hidden" />
+        <img src="/images/bg-curvy-desktop.svg" alt="curvy background" class="w-full hidden md:block" />
         <div class="h-[18.6rem] md:h-0 bg-dark-blue-300"></div>
       </div>
     </header>
@@ -314,10 +300,15 @@
 
     <!-- ATTRIBUTION -->
 
-    <div class="">
-      <p class="attribution">
+    <div class="p-1 text-center">
+      <p class="text-white">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by
-        <a href="#">Your Name Here</a>.
+        <a
+          class="text-blue hover:text-cyan transition-colors duration-300"
+          href="https://www.frontendmentor.io/profile/mbalinoftw"
+          target="_blank"
+          >mbalinoftw</a
+        >.
       </p>
     </div>
   </body>
