--- a/src/index.html
+++ b/src/index.html
@@ -152,7 +152,7 @@
           <img
             src="/images/bg-quotes.png"
             alt=""
-            class="absolute top-2 -left-2 w-8 md:w-12 transform -translate-y-full" />
+            class="absolute top-0 md:top-2 left-1 md:-left-2 w-6 h-4 md:w-12 md:h-10 transform -translate-y-full" />
           <article class="relative p-6 pt-8 rounded-md bg-dark-blue-100 shadow-lgan/50 space-y-4">
             <p class="text-[0.68rem] text-white">
               Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has
