--- a/src/index.html
+++ b/src/index.html
@@ -48,17 +48,17 @@
     <!-- HERO SECTION -->
 
     <header class="relative z-20 pt-6 pb-20 md:pb-40">
-      <div class="max-w-md md:max-w-2xl mx-auto px-6">
+      <div class="md:max-w-3xl mx-auto px-6">
         <div class="flex flex-col space-y-4 text-center">
           <img
             src="/images/illustration-intro.png"
             alt="all your files in one secure location"
-            class="md:w-4/5 md:mx-auto" />
+            class="md:mx-auto" />
           <div class="p-4">
-            <h2 class="mb-4 text-[1.4rem] md:text-[1.8rem] font-semibold text-white">
+            <h2 class="mb-4 text-[1.4rem] md:text-[2.5rem] font-semibold text-white">
               All your files in one secure location, accessible anywhere.
             </h2>
-            <p class="mb-10 text-[0.9rem] md:max-w-md md:mx-auto text-white">
+            <p class="mb-10 text-[0.87rem] md:text-[1.2rem] md:max-w-xl md:mx-auto text-white">
               Fylo stores all your most important files in one secure location. Access them wherever you need, share and
               collaborate with friends family, and co-workers.
             </p>
@@ -80,7 +80,7 @@
     <!-- FEATURES -->
 
     <section class="relative z-10 pb-20 bg-dark-blue-300">
-      <div class="max-w-screen-xl mx-auto px-6">
+      <div class="max-w-screen-lg mx-auto px-6">
         <div class="px-4 grid md:grid-cols-2 gap-y-24">
           <div class="max-w-[22.8rem] mx-auto flex flex-col text-center">
             <img src="/images/icon-access-anywhere.svg" alt="" class="w-16 m-auto mb-4" />
@@ -121,18 +121,18 @@
     <!-- FEATURES 2 -->
 
     <section class="py-20 bg-dark-blue-300">
-      <div class="max-w-screen-lg mx-auto px-8">
-        <div class="flex flex-col md:flex-row md:items-center gap-y-12 md:gap-x-12">
+      <div class="max-w-screen-xl mx-auto px-8">
+        <div class="flex flex-col md:flex-row md:items-center md:justify-center gap-y-12 md:gap-x-12">
           <img src="/images/illustration-stay-productive.png" alt="illustration stay productive" class="" />
           <div class="flex flex-col space-y-4">
-            <h3 class="text-[1.15rem] md:text-3xl font-semibold text-white">
+            <h2 class="text-[1.4rem] md:text-[2.5rem] font-semibold text-white">
               Stay productive, <br class="hidden md:block" />wherever you are
-            </h3>
-            <p class="text-[0.83rem] text-white">
+            </h2>
+            <p class="text-[0.83rem] md:text-[1rem] text-white">
               Never let location be an issue when accessing your files. Fylo has you covered for all of your file
               storage needs.
             </p>
-            <p class="text-[0.83rem] text-white">
+            <p class="text-[0.83rem] md:text-[1rem] text-white">
               Securely share files and folders with friends, family and colleagues for live collaboration. No email
               attachments required.
             </p>
@@ -148,13 +148,13 @@
 
     <section class="pt-20 pb-80 md:pb-96 bg-dark-blue-300">
       <div class="max-w-screen-xl mx-auto px-10">
-        <div class="relative grid md:grid-cols-3 gap-6">
+        <div class="relative grid md:grid-cols-3 gap-8">
           <img
             src="/images/bg-quotes.png"
             alt=""
             class="absolute top-0 md:top-2 left-1 md:-left-2 w-6 h-4 md:w-12 md:h-10 transform -translate-y-full" />
           <article class="relative p-6 pt-8 rounded-md bg-dark-blue-100 shadow-lgan/50 space-y-4">
-            <p class="text-[0.68rem] text-white">
+            <p class="text-[0.68rem] md:text-base text-white">
               Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has
               become a well-oiled collaboration machine.
             </p>
@@ -167,7 +167,7 @@
             </div>
           </article>
           <article class="relative p-6 pt-8 rounded-md bg-dark-blue-100 shadow-lgan/50 space-y-4">
-            <p class="text-[0.68rem] text-white">
+            <p class="text-[0.68rem] md:text-base text-white">
               Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has
               become a well-oiled collaboration machine.
             </p>
@@ -180,7 +180,7 @@
             </div>
           </article>
           <article class="relative p-6 pt-8 rounded-md bg-dark-blue-100 shadow-lgan/50 space-y-4">
-            <p class="text-[0.68rem] text-white">
+            <p class="text-[0.68rem] md:text-base text-white">
               Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has
               become a well-oiled collaboration machine.
             </p>
