move index.html to root directory, update tailwind.config.js

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="../images/favicon-32x32.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Raleway:wght@400;700&display=swap"
       rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" />
-    <link href="/dist/output.css" rel="stylesheet" />
+    <link href="../dist/output.css" rel="stylesheet" />
     <title>Frontend Mentor | Fylo landing page with dark theme and features grid</title>
   </head>
   <body class="relative bg-dark-blue-100">
@@ -50,10 +50,7 @@
     <header class="relative z-20 pt-6 pb-20 md:pb-40">
       <div class="md:max-w-3xl mx-auto px-6">
         <div class="flex flex-col space-y-4 text-center">
-          <img
-            src="/images/illustration-intro.png"
-            alt="all your files in one secure location"
-            class="md:mx-auto" />
+          <img src="/images/illustration-intro.png" alt="all your files in one secure location" class="md:mx-auto" />
           <div class="p-4">
             <h2 class="mb-4 text-[1.4rem] md:text-[2.5rem] font-semibold text-white">
               All your files in one secure location, accessible anywhere.
