fix img src path

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <nav class="py-6 md:py-10 z-10 top-0 left-0 right-0 bg-dark-blue">
       <div class="max-w-screen-xl mx-auto px-6">
         <div class="flex items-center justify-between">
-          <img src="/images/logo.svg" alt="logo" class="w-24 md:w-32" />
+          <img src="./images/logo.svg" alt="logo" class="w-24 md:w-32" />
           <ul class="flex items-center gap-2 md:gap-8">
             <li class="">
               <a
@@ -50,7 +50,7 @@
     <header class="relative z-20 pt-6 pb-20 md:pb-40">
       <div class="md:max-w-3xl mx-auto px-6">
         <div class="flex flex-col space-y-4 text-center">
-          <img src="/images/illustration-intro.png" alt="all your files in one secure location" class="md:mx-auto" />
+          <img src="./images/illustration-intro.png" alt="all your files in one secure location" class="md:mx-auto" />
           <div class="p-4">
             <h2 class="mb-4 text-[1.4rem] md:text-[2.5rem] font-semibold text-white">
               All your files in one secure location, accessible anywhere.
@@ -68,8 +68,8 @@
         </div>
       </div>
       <div class="w-full absolute -z-10 bottom-0">
-        <img src="/images/bg-curvy-mobile.svg" alt="curvy background" class="w-full md:hidden" />
-        <img src="/images/bg-curvy-desktop.svg" alt="curvy background" class="w-full hidden md:block" />
+        <img src="./images/bg-curvy-mobile.svg" alt="curvy background" class="w-full md:hidden" />
+        <img src="./images/bg-curvy-desktop.svg" alt="curvy background" class="w-full hidden md:block" />
         <div class="h-[18.6rem] md:h-0 bg-dark-blue-300"></div>
       </div>
     </header>
@@ -80,7 +80,7 @@
       <div class="max-w-screen-lg mx-auto px-6">
         <div class="px-4 grid md:grid-cols-2 gap-y-24">
           <div class="max-w-[22.8rem] mx-auto flex flex-col text-center">
-            <img src="/images/icon-access-anywhere.svg" alt="" class="w-16 m-auto mb-4" />
+            <img src="./images/icon-access-anywhere.svg" alt="" class="w-16 m-auto mb-4" />
             <h3 class="mb-2 text-lg font-bold text-white">Access your files, anywhere</h3>
             <p class="text-[0.85rem] text-white">
               The ability to use a smartphone, tablet, or computer to access your account means your files follow you
@@ -88,7 +88,7 @@
             </p>
           </div>
           <div class="max-w-[22.8rem] mx-auto flex flex-col text-center">
-            <img src="/images/icon-security.svg" alt="" class="w-16 m-auto mb-4" />
+            <img src="./images/icon-security.svg" alt="" class="w-16 m-auto mb-4" />
             <h3 class="mb-2 text-lg font-bold text-white">Security you can trust</h3>
             <p class="text-[0.85rem] text-white">
               2-factor authentication and user-controlled encryption are just a couple of the security features we allow
@@ -96,7 +96,7 @@
             </p>
           </div>
           <div class="max-w-[22.8rem] mx-auto flex flex-col text-center">
-            <img src="/images/icon-collaboration.svg" alt="" class="w-16 m-auto mb-4" />
+            <img src="./images/icon-collaboration.svg" alt="" class="w-16 m-auto mb-4" />
             <h3 class="mb-2 text-lg font-bold text-white">Real-time collaboration</h3>
             <p class="text-[0.85rem] text-white">
               Securely share files and folders with friends, family and colleagues for live collaboration. No email
@@ -104,7 +104,7 @@
             </p>
           </div>
           <div class="max-w-[22.8rem] mx-auto flex flex-col text-center">
-            <img src="/images/icon-any-file.svg" alt="" class="w-16 m-auto mb-4" />
+            <img src="./images/icon-any-file.svg" alt="" class="w-16 m-auto mb-4" />
             <h3 class="mb-2 text-lg font-bold text-white">Store any type of file</h3>
             <p class="text-[0.85rem] text-white">
               Whether you're sharing holidays photos or work documents, Fylo has you covered allowing for all file types
@@ -120,7 +120,7 @@
     <section class="py-20 bg-dark-blue-300">
       <div class="max-w-screen-xl mx-auto px-8">
         <div class="flex flex-col md:flex-row md:items-center md:justify-center gap-y-12 md:gap-x-12">
-          <img src="/images/illustration-stay-productive.png" alt="illustration stay productive" class="" />
+          <img src="./images/illustration-stay-productive.png" alt="illustration stay productive" class="" />
           <div class="flex flex-col space-y-4">
             <h2 class="text-[1.4rem] md:text-[2.5rem] font-semibold text-white">
               Stay productive, <br class="hidden md:block" />wherever you are
@@ -134,7 +134,7 @@
               attachments required.
             </p>
             <a href="#" class="pb-1 self-start text-[0.73rem] border-b border-cyan text-cyan flex items-center gap-1"
-              >See how Fylo works <img src="/images/icon-arrow.svg" alt="icon arrow" />
+              >See how Fylo works <img src="./images/icon-arrow.svg" alt="icon arrow" />
             </a>
           </div>
         </div>
@@ -147,7 +147,7 @@
       <div class="max-w-screen-xl mx-auto px-10">
         <div class="relative grid md:grid-cols-3 gap-8">
           <img
-            src="/images/bg-quotes.png"
+            src="./images/bg-quotes.png"
             alt=""
             class="absolute top-0 md:top-2 left-1 md:-left-2 w-6 h-4 md:w-12 md:h-10 transform -translate-y-full" />
           <article class="relative p-6 pt-8 rounded-md bg-dark-blue-100 shadow-lgan/50 space-y-4">
@@ -156,7 +156,7 @@
               become a well-oiled collaboration machine.
             </p>
             <div class="flex items-center gap-2">
-              <img src="/images/profile-1.jpg" alt="" class="w-8 h-8 rounded-full" />
+              <img src="./images/profile-1.jpg" alt="" class="w-8 h-8 rounded-full" />
               <div class="leading-none">
                 <h4 class="text-[0.68rem] font-bold text-white tracking-wider">Satish Patel</h4>
                 <span class="text-[0.58rem] text-white">Founder & CEO, Huddle</span>
@@ -169,7 +169,7 @@
               become a well-oiled collaboration machine.
             </p>
             <div class="flex items-center gap-2">
-              <img src="/images/profile-2.jpg" alt="" class="w-8 h-8 rounded-full" />
+              <img src="./images/profile-2.jpg" alt="" class="w-8 h-8 rounded-full" />
               <div class="leading-none">
                 <h4 class="text-[0.68rem] font-bold text-white tracking-wider">Bruce McKenzie</h4>
                 <span class="text-[0.58rem] text-white">Founder & CEO, Huddle</span>
@@ -182,7 +182,7 @@
               become a well-oiled collaboration machine.
             </p>
             <div class="flex items-center gap-2">
-              <img src="/images/profile-3.jpg" alt="" class="w-8 h-8 rounded-full" />
+              <img src="./images/profile-3.jpg" alt="" class="w-8 h-8 rounded-full" />
               <div class="leading-none">
                 <h4 class="text-[0.68rem] font-bold text-white tracking-wider">Iva Boyd</h4>
                 <span class="text-[0.58rem] text-white">Founder & CEO, Huddle</span>
@@ -224,9 +224,8 @@
 
     <footer class="pt-64 pb-8 md:pb-20 bg-dark-blue-400 text-white">
       <div class="max-w-screen-xl mx-auto px-6">
-        <!-- <div class="flex flex-col justify-between gap-16"> -->
         <div class="grid md:grid-cols-[3fr_1fr_1fr] gap-8 px-4">
-          <img src="/images/logo.svg" alt="" class="col-span-full" />
+          <img src="./images/logo.svg" alt="" class="col-span-full" />
           <ul class="grid md:grid-cols-5 gap-12">
             <li class="flex gap-4 md:gap-6 md:col-span-3">
               <i class="fa-solid fa-location-dot"></i>
